# user-interface

./: .gitignore  CMakeLists.txt  README.md  water-quality-qt_de.qm  water-quality-qt_de.ts  water-quality-qt_en.qm  water-quality-qt_en.ts  water-quality-qt_es.qm  water-quality-qt_es.ts  water-quality-qt_fr.qm  water-quality-qt_fr.ts
cwk_3/: Iteration_1.docx  README.md  water-quality-qt
data/: main.cpp  model.cpp  quake.hpp  stats.cpp  stats.hpp  window.cpp
src/: Compound.cpp  Compound.h  LitterIndicators.cpp  LitterIndicators.h  PollutantOverview.cpp  PollutantOverview.h  dashboard.cpp  dashboard.h  examplepage.cpp  examplepage.h  main.cpp  mainwindow.cpp  mainwindow.h  pop.cpp  pop.h
src/data/: config.cpp  config.h  data_processors.cpp  data_processors.h  dataset.cpp  dataset.hpp  filtered_output.csv  model.hpp  pollutant_processor.cpp  pop  pop.txt  pop2.txt  pop_data.cpp  quake.cpp  window.cpp  window.hpp
water-quality-qt/: .gitignore  CMakeLists.txt  README.md
water-quality-qt/docs/: CONTRIBUTING.md
water-quality-qt/src/: mainwindow.h
water-quality-qt/src/models/: waterqualitymodel.h
